--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,7 +194,10 @@ input, select, textarea {
 		margin-bottom: 2em;
 	}
 
-	ul, ol, dl, table, blockquote {
+	 ol, dl, table, blockquote {
+		margin-bottom: 2em;
+	}
+	ul{
 		margin-bottom: 2em;
 	}
 
@@ -1502,12 +1505,19 @@ input, select, textarea {
 			display: block;
 			width: 100%;
 		}
-
+		
 		.image.featured {
 			display: block;
 			width: 100%;
-			margin: 0 0 3.5em 0;
+			/* height:100% */
+			/* margin: 0 0 3.5em 0; */
 		}
+			.image.featured.long {
+				/* height: 100%; */
+				width:auto;
+				overflow-x: scroll;
+				white-space: nowrap;
+			}
 
 		.image.left {
 			float: left;
@@ -1902,16 +1912,19 @@ input, select, textarea {
 /* Header */
 
 	#header {
+		
 		position: relative;
-		position: relative;
+		/* top: -1.2em; */
+		/* left:20%; */
 		background: #fff;
 		text-align: center;
 	}
 
 		#header > .container {
-			padding: 14em 0 7em 0;
-			border-bottom: solid 2px #e5e5e5;
-			box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #e5e5e5;
+			padding: 5em 0 0em 0;
+			margin: 0 0 0 5em;
+			/* border-bottom: solid 2px #e5e5e5; */
+			/* box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #e5e5e5; */
 		}
 
 		#header h1 {
@@ -1939,9 +1952,13 @@ input, select, textarea {
 
 /* Nav */
 
+
+ 
+
 	#nav {
 		position: absolute;
-		top: 3em;
+		z-index: 2;
+		top: 2em;
 		left: 0;
 		width: 100%;
 		cursor: default;
@@ -1961,7 +1978,7 @@ input, select, textarea {
 				text-decoration: none;
 				text-transform: uppercase;
 				font-weight: 400;
-				color: #777;
+				color: #FFF;
 				outline: 0;
 				display: block;
 			}
@@ -1991,7 +2008,8 @@ input, select, textarea {
 					-o-transition: color 0.25s ease-in-out;
 					-ms-transition: color 0.25s ease-in-out;
 					transition: color 0.25s ease-in-out;
-					font-size: 0.85em;
+					font-size: 1.1em;
+					/* font-size: 0.85em; */
 					letter-spacing: 3px;
 				}
 
@@ -2009,6 +2027,13 @@ input, select, textarea {
 			#nav > ul > li:hover > a > span {
 				color: #ED786A;
 			}
+
+		#nav> ul > li >.a_grey{
+		color: #777;
+	}
+	
+
+	
 
 	.dropotron {
 		text-align: left;
@@ -2103,14 +2128,15 @@ input, select, textarea {
 		background: #fff;
 		color: #fff;
 		text-align: center;
-		border-top: solid 2px #e5e5e5;
+		/* border-top: solid 2px #e5e5e5; */
 		border-bottom: solid 2px #e5e5e5;
 		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px 8px 0px 0px #fff;
 		position: relative;
 		text-transform: uppercase;
 		background: url("../../images/banner.jpg");
 		background-size: cover;
-		padding: 10em 0;
+		/* padding: 1em 0; */
+		/* padding: 10em 0; */
 	}
 
 		#banner p {
@@ -2128,6 +2154,8 @@ input, select, textarea {
 
 		#banner > .container {
 			position: relative;
+			margin:0%;
+			width:100%;
 		}
 
 			#banner > .container:before, #banner > .container:after {
@@ -2278,6 +2306,7 @@ input, select, textarea {
 
 			#header > .container {
 				padding: 12em 0 5em 0;
+				/* padding: 12em 0 5em 0; */
 			}
 
 			#header h1 {
