--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1493,7 +1493,7 @@ input, select, textarea {
 	}
 
 		.image:hover {
-			opacity: 0.9;
+			/* opacity: 0.9; */
 		}
 
 		.image img {
@@ -2305,7 +2305,7 @@ input, select, textarea {
 		/* Header */
 
 			#header > .container {
-				padding: 12em 0 5em 0;
+				padding: 5em 0 0em 0;
 				/* padding: 12em 0 5em 0; */
 			}
 
@@ -2377,7 +2377,8 @@ input, select, textarea {
 		/* Header */
 
 			#header > .container {
-				padding: 10em 0 7em 0;
+				padding: 0 0 0 0;
+				/* padding: 10em 0 7em 0; */
 			}
 
 		/* Nav */
@@ -2640,7 +2641,8 @@ input, select, textarea {
 		/* Header */
 
 			#header > .container {
-				padding: 6em 0 4em 0;
+				padding:0 0 0 0
+				/* padding: 6em 0 4em 0; */
 			}
 
 			#header h1 {
@@ -2740,6 +2742,15 @@ input, select, textarea {
 		bottom:20%;
 		left:5%;
 		width:30%;
+		border: none !important;
 		/* height */
 
 	}
+	#namepic:hover{
+
+		opacity:.6;
+		/* color:#ffffff */
+		
+		
+	}
+
